# sd-cooling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/images/lognormal/: Makefile  lognormal.tex
doc/images/newton-cooling/: Makefile  newton-cooling.tex
include/: basic_types.hpp  constants.hpp  cooling_regime.hpp  debug.hpp  directions.hpp  distribution.hpp  experiment_regime.hpp  formatter.hpp  grain_population.hpp  materials.hpp  sd_cooling.hpp  state_transition.hpp  stoner_wohlfarth.hpp  temperature.hpp  unit.hpp  utilities.hpp
include/models/: cooling.hpp  monodispertion_complex_protocol.hpp
include_template/: version.hpp.in
src_cmdline/: CMakeLists.txt
src_cmdline/cooling/: CMakeLists.txt  cooling.cpp  example1.json  example2.json
src_cmdline/monodispertion_complex_protocol/: CMakeLists.txt  monodispertion_complex_protocol.cpp  protocol1.yaml  protocol2.yaml
